tests/04-specified-sealed-trait-doesn't-exist.rs
use sealed_typestate::sealed_typestate;

mod private {
    pub trait Sealed {}
}

sealed_typestate!(Foo<wrong::path::Sealed> { Bar, Baz });

fn main() {}
